...
            imageView.heightAnchor.constraint(equalToConstant: 70),
            imageView.widthAnchor.constraint(equalToConstant: 70)
        ])
        
        return imageView
    }()
    private lazy var logoutButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "logoutButton"
        return button
    }()
    private lazy var userNameLabel: UILabel = {
        let label = UILabel()
...
        self.present(alert, animated: true)
    }
    
    func showLogoutAlert() {
        let alert = AlertModel(title: "Пока-пока!",
                               message: "Уверены, что хотите выйти?",
                               buttonText: "Да",
                               actionText: "Нет", leftCompletion: { [weak self] _ in
            guard let self = self else { return }
            UIBlockingProgressHUD.show()
            self.presenter?.logout()
            UIBlockingProgressHUD.dismiss()
            
...
