...
final class ImagesListCell: UITableViewCell {
    
    static let reuseIdentifier = "ImagesListCell"
    
    var mainImage = UIImageView()
    var dateLabel = UILabel()
    var likeButton = UIButton()
    var gradientView = UIView()

    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super .init(style: style, reuseIdentifier: reuseIdentifier)
        
        backgroundColor = .clear
...
