...
        button.layer.backgroundColor = UIColor.ypWhite?.cgColor
        
        button.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        button.setTitleColor(.ypBlack, for: .normal)
        button.setTitle("Войти", for: .normal)
        
        button.accessibilityIdentifier = "Authenticate"
        
        button.addTarget(self, action: #selector(goToWebVC), for: .touchUpInside)
        
        return button
    }()
    
...
